tests/NormalTests/paczka2/big_fuzzy/71244830.err
Error in line 10: jkX S532 68,3
Error in line 15: p7RN S532 12,7
Error in line 12: jkX A214 71,7
Error in line 5: BxrHgmFYw S24 64,2
Error in line 19: WvN S139 50,4
Error in line 31: BxrHgmFYw A214 50,3
Error in line 34: BxrHgmFYw S24 52,7
Error in line 30: WvN S532 26,8
Error in line 39: WvN A214 73,4
Error in line 40: WvN S532 12,5
Error in line 43: S24 S139 21,9
Error in line 47: CDJXcsvST S24 87,0
Error in line 57: CDJXcsvST S139 49,8
Error in line 46: S24 A214 23,7
Error in line 63: p7RN A214 -1,5
Error in line 61: S24 S139 43,7
Error in line 67: S24 S532 14,2
Error in line 80: S24 S24 4,3
Error in line 55: p7RN A214 15,1
Error in line 85: LpCSnfx7V S139 14,0
Error in line 86: p7RN S139 96,4
Error in line 89: p7RN S24 12,3
Error in line 93: WvN S24 12,7
Error in line 96: WvN S24 29,6
Error in line 98: BxrHgmFYw S532 2,2
Error in line 135: jkX A214 36,3
Error in line 140: LpCSnfx7V S532 14,57
Error in line 142: jkX S532 82,1
Error in line 146: S24 S139 21,6
Error in line 154: LpCSnfx7V S532 55,3
Error in line 152: S24 S532 71,2
Error in line 155: LpCSnfx7V S24 1,1
Error in line 172: BxrHgmFYw S24 58,16
Error in line 162: BxrHgmFYw S24 87,4
Error in line 181: jkX S139 58,8
Error in line 164: WvN A214 71,3
Error in line 193: p7RN A214 93,5
Error in line 194: p7RN S532 42,7
Error in line 198: S24 S139 38,2
Error in line 202: BxrHgmFYw S532 14,2
Error in line 216: CDJXcsvST S139 62,8
Error in line 209: jkX S139 31,4
Error in line 224: jkX A214 40,9
Error in line 228: jkX S532 66,4
Error in line 243: BxrHgmFYw S139 66,37
Error in line 238: p7RN S24 42,9
